--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-hacker
 title: OliverMakesGames
-description: chill indie gamed dev
+description: chill indie game dev
 github:
   is_project_page: false
 
